--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
 
+    <p><a href="localhost:3000">goto</a></p>
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
